<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>uk.ac.ed.inf</groupId>
  <artifactId>PizzaDronz</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>PizzaDronz</name>
  <url>http://maven.apache.org</url>

  <build>
    <plugins>

      <!-- Compiler Plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source> <!-- Changed from 18 to 1.8 -->
          <target>1.8</target> <!-- Changed from 18 to 1.8 -->
          <showWarnings>true</showWarnings>
          <compilerArgs>
            <arg>-Xlint:all,-classfile</arg>
          </compilerArgs>
        </configuration>
      </plugin>

      <!-- Jar Plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.2</version>
        <configuration>
          <archive>
            <index>true</index>
            <manifest>
              <mainClass>uk.ac.ed.inf.PizzaDrone</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>

      <!-- Shade Plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>

  <!-- Properties section -->
  <properties>
    <jackson.version>2.10.0</jackson.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source> <!-- Changed from 18 to 1.8 -->
    <maven.compiler.target>1.8</maven.compiler.target> <!-- Changed from 18 to 1.8 -->
  </properties>

  <dependencies>

    <!-- jackson is used for reading json files. -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.14.0</version>
    </dependency>

    <!-- junit is used for the testing. -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>

  </dependencies>
</project>
